--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Realstate</title>
+    <title>Real Estate</title>
  	<meta name="shahjalal" content="shahjalal">	
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge;chrome=1" /> 
@@ -38,16 +38,17 @@
 						<a class="nav-link nav_link" href="#">Pages</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link nav_link" href="#">Projects</a>
+						<a class="nav-link nav_link" href="#project">Projects</a>
 					</li> 
 					<li class="nav-item">
-						<a class="nav-link nav_link" href="#">Blog</a>
+						<a class="nav-link nav_link" href="#blog">Blog</a>
 					</li> 
 					<li class="nav-item">
 						<a class="nav-link nav_link" href="#">Shop</a>
 					</li> 
 					<li class="nav-item">
-						<a class="nav-link nav_link" href="#">Elements</a>
+						<a class="nav-link nav_link" href="#team">Team</a>
+						<!-- <a class="nav-link nav_link" href="#">Elements</a> -->
 					</li> 
 					<li class="nav-item" style="border:none;">
 						<a class="nav-link nav_link_icon" href="#">
@@ -66,17 +67,31 @@
 				<img class="d-block w-100" src="img/main.jpg" alt="First slide">
 				<div class="carousel-caption carousel_text d-none d-md-block">
 					<h1 class="slide_title respon_h1">Innovation &
-						<br/>Future Technologies</h1>
+						 Future Technologies</h1>
 					<p>We offer the most complete house renovating services in the country,
 						from kitchen design to bathroom remodeling.</p>
 					<button class="btn btn-outline-warning btn-lg main_btn mt-3 text-white">Read more</button>
 				  </div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="d-block w-100" src="img/topImage.jpg" alt="Second slide">
+				<img class="d-block w-100" src="img/topImage.jpg" alt="Second slide"> 
+				<div class="carousel-caption carousel_text d-none d-md-block">
+					<h1 class="slide_title respon_h1">Innovation &
+						 Future Technologies</h1>
+					<p>We offer the most complete house renovating services in the country,
+						from kitchen design to bathroom remodeling.</p>
+					<button class="btn btn-outline-warning btn-lg main_btn mt-3 text-white">Read more</button>
+				  </div>
 			  </div>
 			  <div class="carousel-item">
-				<img class="d-block w-100" src="img/topImage.jpg" alt="Third slide">
+				<img class="d-block w-100" src="img/topImage.jpg" alt="Third slide"> 
+				<div class="carousel-caption carousel_text d-none d-md-block">
+					<h1 class="slide_title respon_h1">Innovation &
+						 Future Technologies</h1>
+					<p>We offer the most complete house renovating services in the country,
+						from kitchen design to bathroom remodeling.</p>
+					<button class="btn btn-outline-warning btn-lg main_btn mt-3 text-white">Read more</button>
+				  </div>
 			  </div>
 			</div>
 			<a class="carousel-control-prev" href="#carouselExa" role="button" data-slide="prev">
@@ -90,11 +105,13 @@
 	<!-- service -->
 	<section id="service">
 		<div class="container pt-5 pb-5 service_container">
-			<div class="row">
-				<div class=" service_img pt-5">
-					<img class="img-fluid" src="img/service.jpg" alt=""> 
+			<div class="row justify-content-center">
+				<div class="col-md-4">
+					<div class=" service_img  ">
+						<img class="img-fluid" src="img/service.jpg" alt=""> 
+					</div>
 				</div>
-				<div class="  col-md-7 service_text">
+				<div class="col-md-6 service_text"> 
 					<h6>PROVIDING ALL KINDS OF</h6>
 					<h1 class="respon_h1">Construction Services</h1>
 					<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Alias voluptate consequatur quasi veniam commodi cum?</p>
@@ -265,7 +282,7 @@
 	<section id="full_project">
 		<div class="container pt-5 pb-5">
 			<div class="row pt-5">
-				<div class="col-md-4">
+				<div class="col-md-4 text-center">
 					<img class="img-fluid full_img" src="img/full_product01.jpg" alt="">
 				</div>
 				<div class="col-md-6 full_product01_text">
@@ -285,7 +302,7 @@
 					<p class="pt-3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum nulla neque suscipit officia, adipisci in quod officiis enim recusandae ipsa.</p>
 					<button class="btn btn-outline-warning btn-lg main_btn mt-3 text-dark">Read more</button>
 				</div>
-				<div class="col-md-4">
+				<div class="col-md-4 text-center">
 					<img class="img-fluid full_img" src="img/full_product02.jpg" alt="">
 				</div>
 			</div>
@@ -330,8 +347,77 @@
 	  </div>
 	</div>
   </section>
-  <!-- team area -->
-  <section id="team">
+ 
+<!-- blog side  -->
+<section class="blog" id="blog"> 
+	<div class="container pt-5 pb-5"> 
+		<div class="text-center section_title">
+			<p class=" font-weight-bold">OUR BLOG</p>
+			<h1 class="main_text_color font-weight-bold respon_h1">Read Our Latest News</h1>
+			<hr class="second_hr"/>
+		</div>
+		<div class="row pt-5">
+			<div class="col-md-6 col-lg-4 text-center">
+				<img class="img-fluid" src="img/blog01.jpg" alt="">
+			</div>
+			<div class="col-md-6 col-lg-4">
+				<div class="blog_text">
+					<div class="d-flex">
+						<div>
+							<h4 class="blog_h4">20</h4>
+							<h6 class="blog_h6">03</h6>
+						</div>
+						<div class="ml-3">
+							<h3 class="blog_h3">High Quality Work For Our Customer</h3>
+						</div>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magnam repellat ipsum. Esse voluptate, expedita explicabo incidunt nisi numquam veritatis.</p>
+					<button class="btn btn-outline-warning btn-lg main_btn mt-3 mb-2 text-dark">Read more</button>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-4 text-center">
+				<img class="img-fluid" src="img/blog02.jpg" alt="">
+			</div>
+		
+			<div class="col-md-6 col-lg-4 blog_text2">
+				<div class="blog_text">
+					<div class="d-flex">
+						<div>
+							<h4 class="blog_h4">20</h4>
+							<h6 class="blog_h6">03</h6>
+						</div>
+						<div class="ml-3">
+							<h3 class="blog_h3">High Quality Work For Our Customer</h3>
+						</div>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magnam repellat ipsum. Esse voluptate, expedita explicabo incidunt nisi numquam veritatis.</p>
+					<button class="btn btn-outline-warning btn-lg main_btn mt-3 mb-2 text-dark">Read more</button>
+				</div>
+			</div>
+			<div class="col-md-6 col-lg-4 text-center">
+				<img class="img-fluid" src="img/blog3.jpg" alt="">
+			</div>
+			<div class="col-md-6 col-lg-4 blog_text2">
+				<div class="blog_text ">
+					<div class="d-flex">
+						<div>
+							<h4 class="blog_h4">20</h4>
+							<h6 class="blog_h6">03</h6>
+						</div>
+						<div class="ml-3">
+							<h3 class="blog_h3">High Quality Work For Our Customer</h3>
+						</div>
+					</div>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magnam repellat ipsum. Esse voluptate, expedita explicabo incidunt nisi numquam veritatis.</p>
+					<button class="btn btn-outline-warning btn-lg main_btn mt-3 mb-2 text-dark">Read more</button>
+				</div>
+			</div>
+		</div>
+		
+</section>
+<!-- blog side -->
+ <!-- team area -->
+ <section id="team">
 	<div class="container pt-5 pb-5"> 
 		<div class="text-center section_title">
 			<p class=" font-weight-bold">OUR TEAM</p>
@@ -390,74 +476,6 @@
 		</div>
 	</div>
   </section>
-<!-- blog side  -->
-<section class="blog"> 
-	<div class="container pt-5 pb-5"> 
-		<div class="text-center section_title">
-			<p class=" font-weight-bold">OUR BLOG</p>
-			<h1 class="main_text_color font-weight-bold respon_h1">Read Our Latest News</h1>
-			<hr class="second_hr"/>
-		</div>
-		<div class="row pt-5">
-			<div class="col-md-6 col-lg-4">
-				<img class="img-fluid" src="img/blog01.jpg" alt="">
-			</div>
-			<div class="col-md-6 col-lg-4">
-				<div class="blog_text">
-					<div class="d-flex">
-						<div>
-							<h4 class="blog_h4">20</h4>
-							<h6 class="blog_h6">03</h6>
-						</div>
-						<div class="ml-3">
-							<h3 class="blog_h3">High Quality Work For Our Customer</h3>
-						</div>
-					</div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magnam repellat ipsum. Esse voluptate, expedita explicabo incidunt nisi numquam veritatis.</p>
-					<button class="btn btn-outline-warning btn-lg main_btn mt-3 mb-2 text-dark">Read more</button>
-				</div>
-			</div>
-			<div class="col-md-6 col-lg-4">
-				<img class="img-fluid" src="img/blog02.jpg" alt="">
-			</div>
-		
-			<div class="col-md-6 col-lg-4 blog_text2">
-				<div class="blog_text">
-					<div class="d-flex">
-						<div>
-							<h4 class="blog_h4">20</h4>
-							<h6 class="blog_h6">03</h6>
-						</div>
-						<div class="ml-3">
-							<h3 class="blog_h3">High Quality Work For Our Customer</h3>
-						</div>
-					</div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magnam repellat ipsum. Esse voluptate, expedita explicabo incidunt nisi numquam veritatis.</p>
-					<button class="btn btn-outline-warning btn-lg main_btn mt-3 mb-2 text-dark">Read more</button>
-				</div>
-			</div>
-			<div class="col-md-6 col-lg-4">
-				<img class="img-fluid" src="img/blog3.jpg" alt="">
-			</div>
-			<div class="col-md-6 col-lg-4 blog_text2">
-				<div class="blog_text blog_text2">
-					<div class="d-flex">
-						<div>
-							<h4 class="blog_h4">20</h4>
-							<h6 class="blog_h6">03</h6>
-						</div>
-						<div class="ml-3">
-							<h3 class="blog_h3">High Quality Work For Our Customer</h3>
-						</div>
-					</div>
-					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur magnam repellat ipsum. Esse voluptate, expedita explicabo incidunt nisi numquam veritatis.</p>
-					<button class="btn btn-outline-warning btn-lg main_btn mt-3 mb-2 text-dark">Read more</button>
-				</div>
-			</div>
-		</div>
-		
-</section>
-<!-- blog side -->
 <!-- footer -->
 <footer id="footer">
 	<div class="container pt-5 pb-5">
